--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-json-form",
-  "version": "1.0.1",
+  "version": "1.0.1.1",
   "description": "A React Native component that builds a form using a predefined JSON schema.  Used to quickly build flexible forms with REST API compatibility.",
   "main": "index.js",
   "scripts": {
@@ -26,7 +26,9 @@
     "url": "https://github.com/WaffleStudios/react-native-json-form/issues"
   },
   "dependencies": {
-    "native-base": "^2.2.0"
+    "react": "16.0.0",
+    "react-native-vector-icons": "^4.5.0",
+    "native-base": "^2.3.7"
   },
   "homepage": "https://github.com/WaffleStudios/react-native-json-form#readme"
 }
