--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "url": "https://github.com/WaffleStudios/react-native-json-form/issues"
   },
   "dependencies": {
+    "native-base": "^2.3.7",
+    "npm": "^5.8.0",
     "react": "16.0.0",
-    "react-native-vector-icons": "^4.5.0",
-    "native-base": "^2.3.7"
+    "react-native-vector-icons": "^4.5.0"
   },
   "homepage": "https://github.com/WaffleStudios/react-native-json-form#readme"
 }
